Fix edge debug info invisible

--- a/index.css
+++ b/index.css
@@ -189,6 +189,7 @@ div[tabindex="-1"]:focus {
 }
 .view-wrapper .edge-mouse-handler .edge-text {
 	opacity: 1;
+	color: var(--themeTextColor);
 }
 
 .server-info {
